--- a/KASKBlog/KASKBlog/Web.config
+++ b/KASKBlog/KASKBlog/Web.config
@@ -9,7 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <!-- <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-KASKBlog-20131126175841;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-KASKBlog-20131126175841.mdf" /> -->
+    <!-- Note: This is how we connect to the database from the web application. -->
+    <!-- We use "localhost" in the connectionString because we are running the SQL Server on our local machine. -->
     <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=localhost;Initial Catalog=KASKBlogDatabase;Integrated Security=True" />
     <add name="KASKBlogContext" providerName="System.Data.SqlClient" connectionString="Data Source=localhost;Initial Catalog=KASKBlogDatabase;Integrated Security=True" />
   </connectionStrings>
